--- a/.github/workflows/gatling.yml
+++ b/.github/workflows/gatling.yml
@@ -2,53 +2,48 @@ name: Gatling CI
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
-  perf-test:
+  gatling:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Java 17 (Temurin)
+      - name: Setup JDK 17
         uses: actions/setup-java@v4
         with:
-          distribution: temurin
-          java-version: 17
+          java-version: '17'
+          distribution: 'temurin'
 
-      - name: Cache Gatling bundle
-        id: cache-gatling
+      - name: Cache Gatling
         uses: actions/cache@v4
         with:
-          path: gatling
-          key: gatling-3.9.5-${{ runner.os }}
+          path: gatling/gatling-charts-highcharts-bundle-3.9.5
+          key: gatling-3.9.5
 
-      - name: Download & unpack Gatling if cache miss
-        if: steps.cache-gatling.outputs.cache-hit != 'true'
+      - name: Download and setup Gatling
         run: |
-          curl -L -o gatling.zip 
-https://repo1.maven.org/maven2/io/gatling/highcharts/gatling-charts-highcharts-bundle/3.9.5/gatling-charts-highcharts-bundle-3.9.5-bundle.zip
+          mkdir -p gatling
+          curl -L https://repo1.maven.org/maven2/io/gatling/highcharts/gatling-charts-highcharts-bundle/3.9.5/gatling-charts-highcharts-bundle-3.9.5-bundle.zip -o gatling.zip
           unzip gatling.zip -d gatling
           rm gatling.zip
 
-      - name: Ensure dummy image for upload tests
+      - name: Prepare simulation resources
         run: |
-          mkdir -p gatling/*/user-files/resources/images
-          echo "dummy" > gatling/*/user-files/resources/images/sample.jpg
+          mkdir -p gatling/gatling-charts-highcharts-bundle-3.9.5/user-files/resources/images
+          echo "dummy" > gatling/gatling-charts-highcharts-bundle-3.9.5/user-files/resources/images/sample.jpg
 
-      - name: Run Petstore CRUD simulation
+      - name: Run Gatling Petstore CRUD Simulation
         run: |
           cd gatling/gatling-charts-highcharts-bundle-3.9.5/bin
-          ./gatling.sh -s simulations.PetstoreCRUDSimulation -nr -rf ${{ 
-github.workspace }}/results
+          ./gatling.sh -s simulations.PetstoreCRUDSimulation -nr -rf results
 
-      - name: Upload HTML report
+      - name: Publish Gatling HTML Report
         uses: actions/upload-artifact@v4
         with:
           name: gatling-report
-          path: results/
-
+          path: gatling/gatling-charts-highcharts-bundle-3.9.5/bin/results/
