--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,21 @@
+# macOS system files
 .DS_Store
-gatling/gatling.zip
-gatling/gatling.zip
-gatling/**/results/
-*.log
 
+# Gatling results and temporary files
+gatling/**/results/
+gatling/**/*.log
+gatling/**/*.zip
+gatling/gatling-charts-highcharts-bundle-*/target/
+
+# Gatling internal folders we don't want in version control
 gatling/gatling-charts-highcharts-bundle-*/bin/
 gatling/gatling-charts-highcharts-bundle-*/conf/
 gatling/gatling-charts-highcharts-bundle-*/lib/
-gatling/gatling-charts-highcharts-bundle-*/target/
-gatling/**/results/
-gatling/gatling.zip
 
-.DS_Store
+# Editor/IDE folders
+.idea/
+.vscode/
+
+# Misc
 *.log
+*.zip
