--- a/.github/workflows/gatling.yml
+++ b/.github/workflows/gatling.yml
@@ -2,41 +2,44 @@ name: Gatling CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   gatling-test:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Java
+      - name: Setup Java 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: temurin
+          java-version: 17
 
-      - name: Download Gatling bundle
+      - name: Download Gatling
         run: |
           curl -L -o gatling.zip https://repo1.maven.org/maven2/io/gatling/highcharts/gatling-charts-highcharts-bundle/3.9.5/gatling-charts-highcharts-bundle-3.9.5-bundle.zip
-          unzip -o gatling.zip -d gatling
+          unzip gatling.zip -d gatling
           rm gatling.zip
 
-      - name: Add sample image for upload
+      - name: Add dummy image for upload
         run: |
-          mkdir -p gatling/**/user-files/resources/images
-          echo "dummy" > gatling/**/user-files/resources/images/sample.jpg
+          mkdir -p gatling/gatling-charts-highcharts-bundle-3.9.5/user-files/resources/images
+          echo "dummy" > gatling/gatling-charts-highcharts-bundle-3.9.5/user-files/resources/images/sample.jpg
+
+      - name: Copy simulation files
+        run: |
+          cp -r gatling-performance-tests/user-files gatling/gatling-charts-highcharts-bundle-3.9.5/
 
       - name: Run Gatling Simulation
         run: |
           cd gatling/gatling-charts-highcharts-bundle-3.9.5/bin
-          ./gatling.sh -s simulations.PetstoreCRUDSimulation -nr -rf ${{ github.workspace }}/results
+          ./gatling.sh \
+            -s simulations.PetstoreCRUDSimulation \
+            -nr \
+            -rf ${{ github.workspace }}/results
 
       - name: Publish HTML Report
         uses: actions/upload-artifact@v4
