--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,4 @@
-# macOS system files
-.DS_Store
-
-# Gatling results and temporary files
-gatling/**/results/
-gatling/**/*.log
-gatling/**/*.zip
-gatling/gatling-charts-highcharts-bundle-*/target/
-
-# Gatling internal folders we don't want in version control
-gatling/gatling-charts-highcharts-bundle-*/bin/
-gatling/gatling-charts-highcharts-bundle-*/conf/
-gatling/gatling-charts-highcharts-bundle-*/lib/
-
-# Editor/IDE folders
-.idea/
-.vscode/
-
-# Misc
-*.log
+gatling/
 *.zip
+**/results/
+*.log
