--- a/.github/workflows/gatling.yml
+++ b/.github/workflows/gatling.yml
@@ -1,54 +1,36 @@
-name: Gatling CI
+name: Gatling Performance Tests
 
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
-  perf-test:
+  gatling:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Check out code
+        uses: actions/checkout@v3
 
-    - name: Set up Temurin 17
-      uses: actions/setup-java@v3
-      with:
-        distribution: temurin
-        java-version: 17
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: '17'
 
-    # 1) Gatling bundle indir
-    - name: Download Gatling bundle
-      run: |
-        curl -sSL -o gatling.zip \
-          https://repo1.maven.org/maven2/io/gatling/highcharts/gatling-charts-highcharts-bundle/3.9.5/gatling-charts-highcharts-bundle-3.9.5-bundle.zip
-        unzip -o gatling.zip -d gatling
-        rm gatling.zip
+      - name: Download Gatling bundle
+        run: |
+          wget -O gatling-bundle.zip \
+            https://repo1.maven.org/maven2/io/gatling/highcharts/gatling-charts-highcharts-bundle/3.9.5/gatling-charts-highcharts-bundle-3.9.5-bundle.zip
+          unzip gatling-bundle.zip -d gatling
 
-    # 2) Kendi simülasyon ve resource dosyalarını bundle içine kopyala
-    - name: Inject simulations & resources
-      run: |
-        BUNDLE=gatling/gatling-charts-highcharts-bundle-3.9.5
-        mkdir -p "$BUNDLE/user-files/simulations" "$BUNDLE/user-files/resources/images"
-        cp -R simulations/*.scala        "$BUNDLE/user-files/simulations/"
-        cp -R resources/*                "$BUNDLE/user-files/resources/"
-        # Fallback dummy image (CI’de gerekiyorsa)
-        if [ ! -f "$BUNDLE/user-files/resources/images/sample.jpg" ]; then
-          echo "dummy" > "$BUNDLE/user-files/resources/images/sample.jpg"
-        fi
+      - name: Verify simulations
+        run: |
+          ls -l gatling/gatling-charts-highcharts-bundle-3.9.5/user-files/simulations
 
-    # 3) Simülasyonu koştur
-    - name: Run Petstore CRUD simulation
-      run: |
-        cd gatling/gatling-charts-highcharts-bundle-3.9.5/bin
-        ./gatling.sh -s simulations.PetstoreCRUDSimulation -nr \
-          -rf "$GITHUB_WORKSPACE/results"
-
-    # 4) Raporu artefakt olarak yükle
-    - name: Upload HTML report
-      uses: actions/upload-artifact@v4
-      with:
-        name: gatling-report
-        path: results/
+      - name: Run Petstore CRUD Simulation
+        working-directory: gatling/gatling-charts-highcharts-bundle-3.9.5/bin
+        run: |
+          ./gatling.sh \
+            -s simulations.PetstoreCRUDSimulation \
+            -nr \
+            -rf "$GITHUB_WORKSPACE/results"
