--- a/.github/workflows/gatling.yml
+++ b/.github/workflows/gatling.yml
@@ -19,9 +19,7 @@ jobs:
 
       - name: Download Gatling bundle
         run: |
-          wget -O gatling-bundle.zip \
-            https://repo1.maven.org/maven2/io/gatling/highcharts/\
-gatling-charts-highcharts-bundle/3.9.5/gatling-charts-highcharts-bundle-3.9.5-bundle.zip
+          wget -O gatling-bundle.zip https://repo1.maven.org/maven2/io/gatling/highcharts/gatling-charts-highcharts-bundle/3.9.5/gatling-charts-highcharts-bundle-3.9.5-bundle.zip
           unzip gatling-bundle.zip -d gatling
 
       - name: Debug Source Simulations Dir
@@ -32,9 +30,7 @@ gatling-charts-highcharts-bundle/3.9.5/gatling-charts-highcharts-bundle-3.9.5-bu
       - name: Copy Scala simulations into bundle
         run: |
           mkdir -p gatling/gatling-charts-highcharts-bundle-3.9.5/user-files/simulations
-          cp -v src/gatling/scala/simulations/*.scala \
-             gatling/gatling-charts-highcharts-bundle-3.9.5/user-files/simulations/ \
-          || echo "🛑 No .scala files copied!"
+          cp -v src/gatling/scala/simulations/*.scala gatling/gatling-charts-highcharts-bundle-3.9.5/user-files/simulations/ || echo "🛑 No .scala files copied!"
 
       - name: Verify Bundle Simulations
         run: |
