--- a/.github/workflows/gatling.yml
+++ b/.github/workflows/gatling.yml
@@ -17,49 +17,30 @@ jobs:
           distribution: temurin
           java-version: '17'
 
-      - name: Download & unzip Gatling bundle
+      - name: Download Gatling bundle
         run: |
-          wget -O gatling-bundle.zip \
-            https://repo1.maven.org/maven2/io/gatling/highcharts/\
-gatling-charts-highcharts-bundle/3.9.5/\
-gatling-charts-highcharts-bundle-3.9.5-bundle.zip
+          wget -O gatling-bundle.zip https://repo1.maven.org/maven2/io/gatling/highcharts/gatling-charts-highcharts-bundle/3.9.5/gatling-charts-highcharts-bundle-3.9.5-bundle.zip
           unzip gatling-bundle.zip -d gatling
-
-      - name: Determine actual bundle directory name
-        id: bundle_dir
-        run: |
-          # untar’dan sonra oluşan tek dizini alıyoruz
-          B=$(ls gatling | grep 'gatling-charts-highcharts-bundle')
-          echo "bundle=$B" >> $GITHUB_OUTPUT
 
       - name: Debug Source Simulations Dir
         run: |
-          echo "== List src/gatling/scala/simulations =="
-          ls -l src/gatling/scala/simulations || echo "DIR NOT FOUND!"
+          echo "== List src/test/scala/simulations =="
+          ls -l src/test/scala/simulations || echo "DIR NOT FOUND!"
 
       - name: Copy Scala simulations into bundle
         run: |
-          BDIR=gatling/${{ steps.bundle_dir.outputs.bundle }}
-          mkdir -p $BDIR/user-files/simulations
-          cp -v src/gatling/scala/simulations/*.scala \
-            $BDIR/user-files/simulations/ \
+          mkdir -p gatling/gatling-charts-highcharts-bundle-3.9.5/user-files/simulations
+          cp -v src/test/scala/simulations/*.scala \
+            gatling/gatling-charts-highcharts-bundle-3.9.5/user-files/simulations/ \
           || echo "🛑 No .scala files copied!"
-
-      - name: Copy CSV data into bundle (opsiyonel)
-        run: |
-          BDIR=gatling/${{ steps.bundle_dir.outputs.bundle }}
-          mkdir -p $BDIR/user-files/data
-          cp -v user-files/data/*.csv \
-            $BDIR/user-files/data/ \
-          || echo "🛑 No .csv files copied!"
 
       - name: Verify Bundle Simulations
         run: |
-          echo "== List $BDIR/user-files/simulations =="
-          ls -l gatling/${{ steps.bundle_dir.outputs.bundle }}/user-files/simulations
+          echo "== List bundle/user-files/simulations =="
+          ls -l gatling/gatling-charts-highcharts-bundle-3.9.5/user-files/simulations
 
       - name: Run Petstore CRUD Simulation
-        working-directory: gatling/${{ steps.bundle_dir.outputs.bundle }}/bin
+        working-directory: gatling/gatling-charts-highcharts-bundle-3.9.5/bin
         run: |
           ./gatling.sh \
             -s simulations.PetstoreCRUDSimulation \
